--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/compression": "1.7.5",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
+    "@types/mongodb": "4.0.7",
     "dotenv": "16.4.5",
     "rimraf": "5.0.7",
     "ts-node": "10.9.2",
